internal/gatewayapi/testdata/gateway-with-multiple-https-listeners-with-overlapping-hostnames.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: foo.example.com
      name: https-1
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - name: tls-secret-example-com
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.example.com'
      name: https-2
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - name: tls-secret-foo-bar-com
        mode: Terminate
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: The hostname foo.example.com overlaps with the hostname *.example.com
          in listener https-2.
        reason: OverlappingHostnames
        status: "True"
        type: OverlappingTLSConfig
      name: https-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: The hostname *.example.com overlaps with the hostname foo.example.com
          in listener https-1.
        reason: OverlappingHostnames
        status: "True"
        type: OverlappingTLSConfig
      name: https-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/https-1
        ports:
        - containerPort: 10443
          name: https-443
          protocol: HTTPS
          servicePort: 443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    backends:
    - metadata:
        kind: HTTPRoute
        name: httproute-1
        namespace: envoy-gateway
      name: httproute/envoy-gateway/httproute-1/rule/0
      settings:
      - addressType: IP
        endpoints:
        - host: 7.7.7.7
          port: 8080
        metadata:
          kind: Service
          name: service-1
          namespace: envoy-gateway
          sectionName: "8080"
        name: httproute/envoy-gateway/httproute-1/rule/0/backend/0
        protocol: HTTP
        weight: 1
    - metadata:
        kind: Service
        name: envoy-envoy-gateway-gateway-1-196ae069
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: envoy-gateway/gateway-1
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: envoy-gateway/gateway-1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
    http:
    - address: 0.0.0.0
      externalPort: 443
      hostnames:
      - foo.example.com
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: https-1
      name: envoy-gateway/gateway-1/https-1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10443
      routes:
      - destination:
          backendClusterRefs:
          - name: httproute/envoy-gateway/httproute-1/rule/0
            weight: 1
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-1/rule/0
        hostname: foo.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-1/rule/0/match/0/foo_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      tls:
        alpnProtocols: null
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNBQ0FRQXdEUVlKS29aSWh2Y05BUUVMQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkoKYm1NdU1SUXdFZ1lEVlFRRERBdGxlR0Z0Y0d4bExtTnZiVEFlRncweU5UQTBNakV3T1RFd05ETmFGdzB6TlRBMApNVGt3T1RFd05ETmFNRGN4RmpBVUJnTlZCQU1NRFNvdVpYaGhiWEJzWlM1amIyMHhIVEFiQmdOVkJBb01GR1Y0CllXMXdiR1VnYjNKbllXNXBlbUYwYVc5dU1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0MKQVFFQXY0anl4TUh1YzQzMHdvWkk4M1JSMXVxU2gvbm9MVWVPdDZnMkNKaFVFYXNaeUNOMzN3bFRRRDE0SEhkSwpOb1k4S [...]
          name: envoy-gateway/tls-secret-example-com
          privateKey: '[redacted]'
    - address: 0.0.0.0
      externalPort: 443
      hostnames:
      - '*.example.com'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: https-2
      name: envoy-gateway/gateway-1/https-2
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10443
      routes:
      - destination:
          backendClusterRefs:
          - name: httproute/envoy-gateway/httproute-1/rule/0
            weight: 1
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-1/rule/0
        hostname: '*.example.com'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-1/rule/0/match/0/*_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      tls:
        alpnProtocols: null
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0FRQXdEUVlKS29aSWh2Y05BUUVMQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkoKYm1NdU1SUXdFZ1lEVlFRRERBdGxlR0Z0Y0d4bExtTnZiVEFlRncweU5UQTBNakV3T1RFNU1qWmFGdzB6TlRBMApNVGt3T1RFNU1qWmFNRFV4RkRBU0JnTlZCQU1NQzJadmJ5NWlZWEl1WTI5dE1SMHdHd1lEVlFRS0RCUmxlR0Z0CmNHeGxJRzl5WjJGdWFYcGhkR2x2YmpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU5JZzRNWUMvVlV6ZVRMN3Z1ai9pSXNwYTVrd0dyZTFvVGVCd2JYTFk1dmlxRXlicjRraWRQbTVXaFdPdm9GTwpuK0t6Q [...]
          name: envoy-gateway/tls-secret-foo-bar-com
          privateKey: '[redacted]'
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
